# flighty_import

./: .gitignore  README.md  airport_codes.txt  pop3_full_scan.py  pyproject.toml  run.py  update.sh
flighty/: __init__.py  airlines.py  airports.py  config.py  deps.py  email_handler.py  parser.py  pdf_report.py  scanner.py  scoring.py  setup.py
