[project]
name = "flighty-email-forwarder"
version = "2.8.0"
description = "Scan your email for flight confirmations and forward them to Flighty"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Drew Twitchell"}
]
keywords = ["flighty", "email", "flights", "travel", "imap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]

# python-dateutil is auto-installed at runtime if missing
dependencies = ["python-dateutil>=2.8.0"]

[project.urls]
Homepage = "https://github.com/drewtwitchell/flighty_import"
Repository = "https://github.com/drewtwitchell/flighty_import"
Issues = "https://github.com/drewtwitchell/flighty_import/issues"

[project.scripts]
flighty-forwarder = "run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flighty*"]
